[package]
name = "modenv"
version = "0.5.0"
edition = "2018"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "CLI to easily manage .env files and keep them consistent."
license = "MIT"
repository = "https://github.com/kurtbuilds/modenv"

# categories are https://crates.io/category_slugs
categories = [
    "development-tools",
    "development-tools::build-utils",
    "command-line-utilities",
]

keywords = [
    "ci",
    "env",
    "dotenv",
    "vars",
]

[features]
push = ["reqwest", "serde", "serde_json"]

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["color", "env", "suggestions"]}
reqwest = {version = "0.11.7", optional = true, features = ["blocking"]}
serde = {version = "1.0.130", optional = true, features = ["derive"]}
serde_json = {version = "1.0.72", optional = true}
