[package]
name = "modenv"
version = "0.9.0"
edition = "2018"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "CLI to easily manage .env files and keep them consistent."
license = "MIT"
repository = "https://github.com/kurtbuilds/modenv"

# categories are https://crates.io/category_slugs
categories = [
    "development-tools",
    "development-tools::build-utils",
    "command-line-utilities",
]

keywords = [
    "ci",
    "env",
    "dotenv",
    "vars",
]

[dependencies]
clap = { version = "=3.1", features = ["color", "env", "suggestions"]}
shell-escape = "0.1.5"
